# captain-project

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: wheels.yml
captain/: __init__.py
captain/agents/: policy.py  state_monitor.py
captain/algorithms/: empirical_env_setup.py  env_setup.py  geneticStrategies.py  marxan_setup.py  reinforce.py  runOptimizedPolicy.py  runPolicyEmpirical.py
captain/biodivinit/: PhyloGenerator.py  SimulatorInit.py  SimulatorPhyloInit.R
captain/biodivsim/: BioDivEnv.py  CellClass.py  ClimateGenerator.py  ConservationTargets.py  DisturbanceGenerator.py  EmpiricalBioDivEnv.py  EmpiricalGrid.py  SimGrid.py  StateInitializer.py  __init__.py
captain/plot/: plot_empirical_env.py  plot_env.py
