[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captain-project"
description = "Conservation Area Prioritization Through Artificial INtelligence"
license = "CC-BY-NC-ND-4.0"
authors = [
    { name = "Daniele Silvestro", email = "captain.project.team@gmail.com" },
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "seaborn == 0.11.2",
    "baltic == 0.1.6",
    "DendroPy == 4.5.2",
    "ffmpy == 0.3.0",
    "gym == 0.21.0",
    "matplotlib == 3.5.1",
    "numpy == 1.21.0",
    "pandas == 1.3.5",
    "PyPDF2 == 1.26.0",
    "scipy == 1.7.3",
]
[project.optional-dependencies]
numba = ["numba == 0.55.0"]

[project.urls]
Home = "https://www.captain-project.net"
Source = "https://github.com/captain-project/captain-project"
Documentation = "https://github.com/captain-project/notebooks"

[tool.hatch.version]
path = "captain/__init__.py"
