[metadata]
name = captain
description = "Conservation Prioritization Through Artificial Intelligence"
version = 0.1.0
url = https://www.captain-project.net
author = "Daniele Silvestro"
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = captain
install_requires =
  baltic==0.1.6
  DendroPy==4.5.2
  ffmpy==0.3.0
  gym==0.21.0
  matplotlib==3.5.1
  #numba==0.55.0
  numpy==1.21.0
  pandas==1.3.5
  PyPDF2==1.26.0
  scipy==1.7.3
  seaborn==0.11.2
